Towards a working version of CPE embedded.

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -26,6 +26,7 @@
             "@native-uarm/*": ["../src/uarm/*"],
             "@pwa/*": ["pwa/src/app/*"],
             "@assets/*": ["pwa/src/assets/*"],
+            "@embedded/*": ["embedded/src/*"],
             "@root/*": ["../*"],
         },
         "useDefineForClassFields": false,
